  . Added CGI SAPI -T option which can be used to measure execution
    time of script repeated several times. (Dmitry)
- Improved streams:
  . Added stream_supports_lock() function. (Benjamin Schulz)
  . Added "ignore_errors" option to http fopen wrapper. (David Zulke, Sara)
  . Added context parameter for copy() function. (Sara)
  . Added "glob" stream wrapper. (Marcus)
- Improved ext/soap to support element names in context of XMLShema's <any>.
  (Dmitry)
- Improved ext/openssl: (Dmitry)
  . Added support for OpenSSL digest functions
  . Added support for OpenSSL cipher functions
  . Added access to internal values of DSA, RSA and DH keys
- Improved md5() implementation. (Solar Designer, Dmitry)
- Allowed user-level access for short_open_tag. (Stas)

- Upgraded bundled sqlite to version 3.5.6. (Scott)

- Fixed html_entity_decode() incorrectly converting numeric html entities
  to different characters with cp1251 and cp866. (Scott)
- Fixed possible crash in ext/soap because of uninitialized value. (Zdash Urf)
- Fixed PECL bug #12431 (OCI8 ping functionality is broken). (Oracle Corp.)

- Fixed bug #44414 (Incomplete reporting about abstract methods). (Dmitry)
- Fixed bug #44390 (mysqli_bind_param/bind_result and Object member variables)
  (Andrey)
- Fixed bug #44352 (mysqli_connect_error() false negative for host errors).
  (Andrey)
- Fixed bug #44336 (Improve pcre UTF-8 string matching performance).
  (frode at coretrek dot com, Nuno)
- Fixed bug #44257 (timelib_tz_lookup_table must use float for gmtoffset). 
  (Derick, iuri dot fiedoruk at hp dot com).
- Fixed bug #44214 (Crash using preg_replace_callback() and global variable).
  (Nuno, Scott)
- Fixed bug #43960 (strtotime() returns timestamp in the future when given a
  bogus string).
- Fixed bug #43832 (mysqli_get_charset() doesn't expose charset comment).
  (Andrey)
- Fixed bug #43808 (date_create never fails (even when it should)). (Derick)